# GroundStation

./: .gitignore  README.md  a.out  test.cpp  test.py
atc/: atc.py  packets.py  plane.py
command/: index.html
data_demo_client/client/: Cargo.toml
data_demo_client/client/src/: main.rs
data_handler/: Cargo.toml  config.json
data_handler/src/: config.rs  main.rs  serial_handler.rs  tcptx.rs  websocket.rs
data_handler/src/backend/: decoder.rs  gps.rs  mod.rs  telemetry.rs
rpi_dump/: Cargo.toml  config.json
rpi_dump/src/: adsb.rs  config.rs  main.rs  serial.rs  uart.rs
rpi_setup/: setup.sh
