[package]
name = "data_handler"
version = "0.1.0"
authors = ["22h39 <17597456+22h39@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
serialport = "4.0.0"
serde_json = "1.0"
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.0"
tungstenite = "0.13.0"
spmc_buffer = "0.5.1"
